fixed overflow

--- a/client/src/pages/user/Checkout/Checkout.css
+++ b/client/src/pages/user/Checkout/Checkout.css
@@ -1,5 +1,5 @@
 .h-custom{
-    height: 100vh;
+    height: auto;
     width: 100%;
 }
 
